# litconnector

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/: app.py  data_filtering.py  data_processing.py  file_utils.py  network_analysis.py
src/sample_input/: filter_group_file.csv  network_config_file.csv  network_edge_view_options.csv
