[project]
name = "edsp-litconnector"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "RTI International CDS-AI" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "mlxtend>=0.23.1",
    "numpy==1.24.0",
    "pandas==1.5.2",
    "rispy>=0.9.0",
    "streamlit-agraph>=0.0.45",
    "streamlit>=1.38.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Ruff has a lot of additional linters that can be really helpful. Only 'E' and 'F' 
# linters are on by default.
[tool.ruff]
exclude = [".git", ".vscode", ".pytest_cache", ".mypy_cache", ".env"]
ignore = ["B008", "E501", "RET504", "B905", "N806", "N803"]
line-length = 88
select = [
    "B",   # https://pypi.org/project/flake8-bugbear/
    "E",   # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
    "F",   # https://flake8.pycqa.org/en/latest/user/error-codes.html
    "W",   # https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
    "I",   # https://pycqa.github.io/isort/
    "N",   # https://github.com/PyCQA/pep8-naming
    "C4",  # https://github.com/adamchainz/flake8-comprehensions
    "EXE", # https://pypi.org/project/flake8-executable/
    "ISC", # https://github.com/flake8-implicit-str-concat/flake8-implicit-str-concat
    "ICN", # https://pypi.org/project/flake8-import-conventions/
    "PIE", # https://pypi.org/project/flake8-pie/
    "PT",  # https://github.com/m-burst/flake8-pytest-style
    "RET", # https://pypi.org/project/flake8-return/
    "SIM", # https://pypi.org/project/flake8-simplify/
    "ERA", # https://pypi.org/project/flake8-eradicate/
    "PLC", # https://beta.ruff.rs/docs/rules/#convention-plc
    "RUF", # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
    "ARG", # https://beta.ruff.rs/docs/rules/#flake8-unused-arguments-arg
]

